--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <head> Designing For The Screen </head>
+    <head>
+    <link rel="stylesheet" href="css/main.css">
+     </head>
     <body>
         <h1>Hello World</h1>
         
