--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.css">
      </head>
     <body>
         <h1>Hello World</h1>
