--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <link rel="stylesheet" href="main.css">
      </head>
     <body>
-        <h1>Hello World</h1>
+       <center> <h1>Hello World</h1> </center>
+        <br>
         
         <h2> The Basics </h2>
     <ol>  
