--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <tbody>
             <tr>
                 <td><img src="https://cdn.britannica.com/85/235885-050-C8CC6D8B/Samoyed-dog-standing-snow.jpg" alt="samoyed"></td>
-                <td><i> Samoyed</i>i></td>
+                <td><i> Samoyed</i></td>
                 <td>2</td>
                 <td><a href="https://dogtime.com/dog-breeds/samoyed">More Info</a></td>
             </tr>
@@ -56,7 +56,7 @@
                 <td><a href="https://dogtime.com/dog-breeds/siberian-husky">More Info</a></td>
             </tr>
             <tr>
-                <td><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3xTs4strH6elxSxP-D7zW5_9q4agxHweUmg&s" alt="borzoi"></td>
+                <td><img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcT5H4ClcYcemWt-0uxtzX53Mrc3qxWeVEPXm3ttC8b8J3tAhV_D" alt="borzoi"></td>
                 <td><i>Borzoi</i></td>
                 <td>4</td>
                 <td><a href="https://dogtime.com/dog-breeds/borzoi">More Info</a></td>
