--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
      </head>
     <body>
         <center> 
-    <h2>Navigation</h2>
+              <div class="tab-container">
+        <a href="#list" class="tabs">List</a>
+        <a href="#table" class="tabs">Table</a>
+    </div>
+
+    <h2>Classes</h2>
     <ul>
-        <li><a href="list.html">List Page</a></li>
-        <li><a href="table.html">Table Page</a></li>
+        <li><a href="list.html">Exercise one </a></li>
+        <li><a href="table.html">Exercise two </a></li>
     </ul>
             </center>
 </body>
