--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <center> 
             <br><br>
     <h2>Classes</h2>
-    <ul>
-        <li><a href="list.html">Exercise one </a></li>
-        <li><a href="table.html">Exercise two </a></li>
-    </ul>
+            <br>
+    <tr>
+        <td><a href="list.html">Exercise one </a></td>
+        <td><a href="table.html">Exercise two </a></td>
+    </tr>
             </center>
 </body>
 </html>
