--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <body>
         <center> 
             <br><br>
-    <h2>Classes</h2>
-            <br>
-    <tr>
-        <td><a href="list.html">Exercise one </a></td>
-        <td><a href="table.html">Exercise two </a></td>
-    </tr>
+    <h2>Designing For The Screen</h2>
+<p>
+  <a href="list.html">Task two</a>
+  <a href="table.html">Task three</a>
+</p>
             </center>
 </body>
 </html>
