--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <html>
     <head>
     <link rel="stylesheet" href="main.css">
-     </head>
+    </head>
+    <title> Main </title>
     <body>
         <center> 
             <br><br>
     <h2>Designing For The Screen</h2>
 <p>
-  <a href="list.html">Task two</a>
-  <a href="table.html">Task three</a>
+  <a href="list.html">Task Two</a>
+  <a href="table.html">Task Three </a>
+  <a href="form%20mail.html">Task Four </a> 
 </p>
             </center>
 </body>
