--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<DOCTYPE html>
 <html>
     <head>
     <link rel="stylesheet" href="main.css">
-    </head>
     <title> Main </title>
+    </head>
     <body>
         <center> 
             <br><br>
